--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h1>New Post</h1>
+
+<%= simple_form_for @post do |f| %>
+  <%= f.input :photo, as: :file, :required => false, :label => 'New Murinal' %>
+  <%= f.input :description, :required => false, :placeholder => 'Add Comment' %>
+  <%= f.submit "Share", class: "waves-effect waves-light btn" %>
+<% end %>
