--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
 @import "materialize/components/color";
 $primary-color: color("blue", "lighten-2") !default;
-@import "materialize"; 
+@import "materialize";
+@import "posts";
