--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   .murinal_image {
+    height: 303px;
+    width: 303px;
     border-radius: 4px;
     border: 2px solid black;
   }
