--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><%= link_to "Sign Up", root_path %></li>
+        <li><%= link_to "Sign Up", new_user_path %></li>
         <li><%= link_to "Sign In", root_path %></li>
       </ul>
     </div>
