--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Register Here</h1>
+
+<%= simple_form_for @user do |f| %>
+  <%= f.input :email, :required => false, :placeholder => 'email@address.com' %>
+  <%= f.input :username, :required => false, :placeholder => 'Enter your handle here' %>
+  <%= f.input :password, :required => false, :placeholder => '********' %>
+  <%= f.input :password_confirmation, :required => false, :placeholder => '********' %>
+  <%= f.submit "Register", class: "waves-effect waves-light btn" %>
+<% end %>
