--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><%= link_to "Sign Up", new_user_path %></li>
-        <li><%= link_to "Sign In", root_path %></li>
+        <li><%= link_to "Sign In", login_path %></li>
       </ul>
     </div>
   </nav>
