--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
     <div class="nav-wrapper">
       <%= link_to "Murinal", root_path, :class => "brand-logo" %>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><%= link_to "Sign Up", new_user_path %></li>
-        <li><%= link_to "Sign In", login_path %></li>
+        <% if @current_user == @user %>
+          <li><%= link_to "Logout", logout_path %></li>
+        <% else %>
+          <li><%= link_to "Sign Up", new_user_path %></li>
+          <li><%= link_to "Sign In", login_path %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
