--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       <%= link_to "Murinal", root_path, :class => "brand-logo" %>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <% if @current_user == @user %>
+          <li><%= link_to "New Post", new_post_path %></li>
           <li><%= link_to "Logout", logout_path %></li>
         <% else %>
           <li><%= link_to "Sign Up", new_user_path %></li>
