--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <div class="nav-wrapper">
       <%= link_to "Murinal", root_path, :class => "brand-logo" %>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <% if @current_user == @user %>
+        <% if @current_user %>
           <li><%= link_to "New Murinal", new_post_path %></li>
           <li><%= link_to "Logout", logout_path %></li>
         <% else %>
