--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <% if @current_user %>
           <li><%= link_to "New Murinal", new_post_path %></li>
-          <li><%= link_to "Logout", logout_path %></li>
+          <li><%= link_to "Logout", "#" %></li>
         <% else %>
-          <li><%= link_to "Sign Up", new_user_path %></li>
-          <li><%= link_to "Sign In", login_path %></li>
+          <li><%= link_to "Sign Up", "#" %></li>
+          <li><%= link_to "Sign In", "#" %></li>
         <% end %>
       </ul>
     </div>
