--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <%= render 'peek/bar' %>
     <nav>
       <div class="nav-wrapper">
         <%= link_to "Murinal", root_path, :class => "brand-logo" %>
