--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <% if @current_user %>
             <li><%= link_to "New Murinal", new_post_path %></li>
-            <li><%= link_to "Logout", destroy_user_session_path, :method => 'delete' %></li>
+            <li><%= button_to "Logout", destroy_user_session_path, :method => 'delete' %></li>
           <% else %>
             <li><%= link_to "Sign Up", new_user_registration_path %></li>
             <li><%= link_to "Sign In", new_user_session_path %></li>
